Выполнено задание к 7 лекции