@@ -1,25 +1,36 @@
 package com.restaurant.ratingsystem.service;
 
 import com.restaurant.ratingsystem.entity.Restaurant;
+import com.restaurant.ratingsystem.entity.Visitor;
 import com.restaurant.ratingsystem.entity.RatingVisitor;
 import com.restaurant.ratingsystem.dto.RatingRequestDTO;
 import com.restaurant.ratingsystem.dto.RatingResponseDTO;
 import com.restaurant.ratingsystem.repository.RestaurantRepository;
+import com.restaurant.ratingsystem.repository.VisitorRepository;
+
+import jakarta.transaction.Transactional;
+
 import com.restaurant.ratingsystem.repository.RatingVisitorRepository;
 
 import org.springframework.stereotype.Service;
 
 import java.math.*;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class RatingVisitorService {
     private final RatingVisitorRepository ratingVisitorRepository;
     private final RestaurantRepository restaurantRepository;
+    private final VisitorRepository visitorRepository;
 
-    public RatingVisitorService(RatingVisitorRepository ratingVisitorRepository, RestaurantRepository restaurantRepository) {
+    public RatingVisitorService(RatingVisitorRepository ratingVisitorRepository, 
+                                RestaurantRepository restaurantRepository,
+                                VisitorRepository visitorRepository) {
         this.ratingVisitorRepository = ratingVisitorRepository;
         this.restaurantRepository = restaurantRepository;
+        this.visitorRepository = visitorRepository;
     }
 
     //public RatingVisitor addRating(Long visitorId, Long restaurantId, int rating, String textReview) {
@@ -30,35 +41,39 @@ public class RatingVisitorService {
     //}
 
     public RatingResponseDTO addRating(RatingRequestDTO ratingRequestDTO) {
-        RatingVisitor rating = new RatingVisitor(
-            null, 
-            ratingRequestDTO.idVisitor(), 
-            ratingRequestDTO.idRestaurant(), 
-            ratingRequestDTO.rating(), 
-            ratingRequestDTO.textReview());
+        Visitor visitor = visitorRepository.findById(ratingRequestDTO.idVisitor())
+                .orElseThrow(() -> new RuntimeException("Посетитель не найден"));
+        
+        Restaurant restaurant = restaurantRepository.findById(ratingRequestDTO.idRestaurant())
+                .orElseThrow(() -> new RuntimeException("Ресторан не найден"));
+        
+        RatingVisitor rating =new RatingVisitor(
+            null,
+            visitor,
+            restaurant,
+            ratingRequestDTO.rating(),
+            ratingRequestDTO.textReview()
+        );
+        
         rating = ratingVisitorRepository.save(rating);
-        updateRestaurantRating(ratingRequestDTO.idRestaurant());
+        
+        updateRestaurantRating(restaurant.getId());
+        
         return convertToResponse(rating);
     }
 
-    private void updateRestaurantRating(Long restaurantId) {
-        List<RatingVisitor> restaurantRatings = ratingVisitorRepository.findAll().stream()
-                .filter(r -> r.getIdRestaurant().equals(restaurantId))
-                .toList();
-
-        if (!restaurantRatings.isEmpty()) {
-            double average = restaurantRatings.stream()
-                    .mapToInt(RatingVisitor::getRating)
-                    .average()
-                    .orElse(0.0);
-            
-            BigDecimal averageRating = BigDecimal.valueOf(average)
+    private void updateRestaurantRating(Long idRestaurant) {
+        Double aveRating = ratingVisitorRepository.findAverageRatingByRestaurantId(idRestaurant);
+        
+        if (aveRating != null) {
+            BigDecimal roundedRating = BigDecimal.valueOf(aveRating)
                     .setScale(2, RoundingMode.HALF_UP);
             
-            Restaurant restaurant = restaurantRepository.findById(restaurantId)
+            Restaurant restaurant = restaurantRepository.findById(idRestaurant)
                     .orElseThrow(() -> new RuntimeException("Ресторан не найден"));
             
-            restaurant.setUserRating(averageRating);
+            restaurant.setUserRating(roundedRating);
+            restaurantRepository.save(restaurant);
         }
     }
 
@@ -68,8 +83,8 @@ public class RatingVisitorService {
                 .findFirst()
                 .orElseThrow(() -> new RuntimeException("Оценка не найдена"));
 
-        ratingVisitorRepository.remove(id);
-        updateRestaurantRating(rating.getIdRestaurant());
+        ratingVisitorRepository.deleteById(id);
+        updateRestaurantRating(rating.getRestaurant().getId());
     }
 
     //public List<RatingVisitor> getAllRatings() {
@@ -78,14 +93,15 @@ public class RatingVisitorService {
 
     public List<RatingResponseDTO> getAllRatings() {
         return ratingVisitorRepository.findAll().stream()
-            .map(this::convertToResponse).toList();
+            .map(this::convertToResponse)
+            .collect(Collectors.toList());
     }
 
     private RatingResponseDTO convertToResponse(RatingVisitor rating) {
         return new RatingResponseDTO(
             rating.getId(),
-            rating.getIdVisitor(),
-            rating.getIdRestaurant(),
+            rating.getVisitor().getId(),
+            rating.getRestaurant().getId(),
             rating.getRating(),
             rating.getTextReview()
         );
